<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Carnevale di Ivrea</string>
    <string name="action_settings">Settings</string>
    <string name="oppure">oppure</string>
    <string name="please_login">Per accedere alla sfida, devi accedere al tuo account Google</string>
    <string name="button_map">PROVA IL GIOCO</string>
    <string name="button_back">torna indietro</string>
    <string name="minigame_baloon">Gioca con me!</string>
    <string name="under_construction_balloon">Fermo! \nStiamo ancora \ncostruendo\n il gioco</string>
    <string name="under_construction_title">Prossimamente</string>
    <string name="otherTeam_baloon">Sfidami!</string>
    <string name="log_out">DISCONNETTITI</string>
    <string name="button_battle">GIOCA</string>
    <string name="ivrea_map_title">Ivrea</string>
    <string name="ivrea_map_suggest">Scegli un luogo</string>
    <string name="ivrea_map_button_history">Storia</string>
    <string name="ivrea_map_button_minigame">Minigame</string>
    <string name="start_minigame">Comincia</string>
    <string name="next_game_in">Prossima partita tra</string>
    <string name="ivrea_map_button_openplace">Apri</string>
    <string name="ivrea_map_button_battle">Battaglia</string>
    <string name="leaderboard_btn">Classifica</string>
    <string name="orange">arance</string>
    <string name="predaindora_bg">Castellazzo</string>
    <string name="predaindora_title">Preda in Dora</string>
    <string name="predaindora_btn">preda in Dora - roccia</string>
    <string name="quiz">Quiz</string>
    <string name="popup1text">Tocca le icone per scoprire i luoghi</string>
    <string name="popup2text">Tocca la barra per proseguire</string>
    <string name="buttonpopUptext">Ho Capito</string>
    
    <plurals name="orange">
        <item quantity="one">1 arancia</item>
        <item quantity="other">%d arance</item>
    </plurals>

    <string name="point">punti</string>

    <plurals name="point">
        <item quantity="one">1 punto</item>
        <item quantity="other">%d punti</item>
    </plurals>
    <plurals name="request">
        <item quantity="one">1 richiesta</item>
        <item quantity="other">%d richieste</item>
    </plurals>
    <plurals name="gift">
        <item quantity="one">1 regalo</item>
        <item quantity="other">%d regali</item>
    </plurals>

    <string name="new_gift_received">Regalo inviato!</string>
    <string name="new_request_received">Aiuta il tuo amico!</string>
    <string name="send_gift_description">Aiuta i tuoi amici con un set di 15 arance!</string>
    <string name="send_request_description">A secco di arance? Chiedi agli amici!</string>
    <string name="send_gift">Invia arance</string>
    <string name="send_request">Chiedi agli amici</string>
    <string name="open_inbox">Apri</string>
    <string name="accept">Accetta</string>
    <string name="refuse">No, grazie</string>
    <string name="accept0">Nessuna richiesta da accettare</string>
    <string name="accept1">Vuoi accettare la richiesta di %s?</string>
    <string name="acceptMore">Vuoi accettare le seguenti richieste?\n\n</string>
    <string name="acceptMoreLi" formatted="false">&#8226; %s da %s \n</string>
    <string name="player">Player</string>
    <string name="default_player_name">Anonimo</string>
    <string name="logout">Logout</string>
    <string name="register">Entra</string>
    <string name="loading">loading</string>
    <string name="gift_gained_msg">hai ottenuto %d arance</string>
    <string name="fagiolata_title">Fagiolata Benefica</string>
    <string name="fagiolata_invite_singin">Accedi a Google Play Games! Potrai giocare con i tuoi amici e ricevere da loro preziosi carichi di arance.</string>
    <string name="libroverbali_title">Libro dei verbali</string>
    <string name="youGain">Hai conquistato</string>
    <string name="yourScore">Il tuo punteggio</string>
    <string name="whatAPity">Che peccato!</string>
    <string name="messPocheArance"> Non hai un numero di arance sufficiente!!! \n  Vai alla scoperta dei luoghi per guadagnarle </string>
    <string name="messZeroArance"> Ma dove vai se l\'arancia non ce l\'hai? \n Vai alla scoperta dei luoghi per guadagnarle </string>
    <string name="you">TU</string>
    <string name="yourOpponent">IL TUO\n AVVERSARIO</string>
    <string name="youWin">HAI VINTO</string>
    <string name="youLoose">HAI PERSO</string>
    <string name="pair">PAREGGIO!</string>
    <string name="waitYourOpponent">Ora attendi che giochi il tuo avversario</string>
    <string name="challenge">Sfida</string>
    <string name="mp_not_your_turn_title">Sii paziente!</string>
    <string name="mp_not_your_turn_text">Non è ancora il tuo turno!</string>
    <string name="mp_auto_match_title">Sii paziente!</string>
    <string name="mp_auto_match_text">Non abbiamo ancora trovato un avversario alla tua altezza!</string>
    <string name="mp_cancelled_title">Partita annullata!</string>
    <string name="mp_cancelled_text">La partita è stata annullata.\nForse il tuo avversario non ha accettato la tua sfida.</string>
    <string name="mp_expired_title">Partita annullata!</string>
    <string name="mp_expired_text">La partita è stata annullata.\nForse uno di voi due ha dimenticato di giocare .</string>

    <!-- Quiz -->
    <string name="Quiz_baloon">Gioca al Quiz</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_main">Benvenuto nel Quiz!</string>
    <string name="quiz_descr">Guarda il video e rispondi alle domande per guadagnare più arance possibili!</string>
    <string name="videoPlay">Guarda il video</string>
    <string name="gamePlay">Gioca</string>
    <string name="title_activity_quiz">Quiz</string>
    <string name="title_activity_quiz_timer">QuizTimer</string>

</resources>