<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/player_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ivreaGray"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:contentDescription="@string/player"
        android:src="@drawable/profile" />

    <TextView
        android:id="@+id/playerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/default_player_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <View
        android:id="@+id/hr"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/gray" />

    <TextView
        android:id="@+id/oranges_counter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:drawableLeft="@drawable/orange"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:text="@string/orange"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/points_counter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:drawableLeft="@drawable/orange"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:text="@string/point"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/leaderboardBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp"
        android:onClick="showLeaderboard"
        android:text="@string/leaderboard_btn" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white" >
    </com.google.android.gms.common.SignInButton>

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/orange_button"
        android:padding="5dp"
        android:text="@string/log_out"
        android:textColor="@color/ivreaBlue"
        android:textColorHint="@color/ivreaBlue"
        android:textColorLink="@color/ivreaBlue"
        android:visibility="gone" />

</LinearLayout>