<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/placebar_btn_cont"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/history_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ivrea_map_button_history" />

        <Button
            android:id="@+id/battle_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="goToBattle"
            android:text="@string/ivrea_map_button_battle"
            android:visibility="gone" />

        <Button
            android:id="@+id/minigame_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="goToMinigame"
            android:text="@string/ivrea_map_button_minigame"
            android:visibility="gone" />
    </LinearLayout>

    <TextView
        android:id="@+id/placebar_place_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/ivrea_map_suggest"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/ivreaOrange"
        android:textSize="@dimen/activity_horizontal_margin"
        android:textStyle="bold" />

</LinearLayout>