<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fagiolata_gray"
    android:orientation="vertical"
    tools:context=".FagiolataPlay" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center" >

        <TextView
            android:id="@+id/tv_gift_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/orange"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="@string/loading"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_open_inbox"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/orange_button"
            android:text="@string/open_inbox" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center" >

        <TextView
            android:id="@+id/tv_request_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/orange"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="@string/loading"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_open_inbox2"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:background="@drawable/orange_button"
            android:text="@string/open_inbox" />

    </LinearLayout>

    <!-- MAIN DISPLAY -->

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_send_gift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/orange_button"
            android:text="@string/send_gift" />

        <Button
            android:id="@+id/button_send_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/orange_button"
            android:text="@string/send_request" />
    </LinearLayout>

    <!-- SIGN-IN BAR -->


    <!-- SIGN-OUT BAR -->

</LinearLayout>