<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ivreaOrangeLight"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/newScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/point"
        android:textColor="@color/white"
        android:textSize="100sp" />

    <TextView
        android:id="@+id/youGain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/newScore"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="22dp"
        android:layout_marginLeft="72dp"
        android:gravity="center"
        android:text="@string/youGain"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/totalScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:minEms="3"
        android:text="200.000"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="100sp" />

    <TextView
        android:id="@+id/yourScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/totalScore"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp"
        android:gravity="center"
        android:text="@string/yourScore"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/scoreToAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/totalScore"
        android:layout_below="@+id/totalScore"
        android:text="+100"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="50sp" />

</RelativeLayout>