<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"    
    xmlns:geekui="http://schemas.android.com/apk/res-auto"
    android:id="@+id/underConstructionFullLayout"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_margin="0dp"
    android:background="@drawable/place_under_construction_bg"
    android:scaleType="centerCrop"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="235dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/baloon" >

                <com.mobsandgeeks.ui.TypefaceTextView
                    android:id="@+id/balloonMiniGame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:gravity="center"
                    android:text="@string/under_construction_balloon"
                    android:textColor="@color/ivreaGray"
                    android:textSize="20sp"
                    geekui:customTypeface="fonts/rumpelstiltskin.ttf" />

            </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/mgTimerTextA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/next_game_in"
                android:textColor="@android:color/white"
                android:visibility="gone" />

            <TextView
                android:id="@+id/mgTimerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:text="00:00"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/mgTimerBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/character"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="false"
        android:contentDescription="@string/ivrea_map_button_minigame"
        android:src="@drawable/generale_under_construction" />

</RelativeLayout>