<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <FrameLayout
        android:id="@+id/login_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="#55878476"
        android:paddingBottom="3dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:visibility="gone" >

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:background="@color/ivreaGrayOpacity80"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingTop="10dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/please_login"
                android:textColor="@color/ivreaBlue"
                android:textSize="13sp" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textColorLink="@color/white" >
            </com.google.android.gms.common.SignInButton>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:gravity="center"
                android:text="@string/oppure"
                android:textColor="@color/ivreaBlue"
                android:textSize="13sp" />

            <Button
                android:id="@+id/goToMapButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/orange_button"
                android:onClick="goToMap"
                android:padding="20dp"
                android:text="@string/button_back"
                android:textColor="@color/ivreaBlue"
                android:textColorHint="@color/ivreaBlue"
                android:textColorLink="@color/ivreaBlue" />
        </LinearLayout>
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#AAAAAAAA" >

        <ProgressBar
            android:id="@+id/progress_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

</RelativeLayout>